# SimpleAgentLib

./: .gitignore  README.md  chat.py  chat_extended.py  pyproject.toml  requirements.txt
agentlib/: __init__.py  agent.py  context.py  essential_tools.py  extended_agent.py  model_backend.py  skills_tools.py
agentlib/backends/: __init__.py  google.py  mock.py  openai.py
test_workspace/: triangle.py
test_workspace/.agent/skills/secret_word/: SKILL.md
tests/: test_agent.py  test_essential_tools.py  test_extended_agent.py  test_google_backend.py  test_openai_backend.py  test_skills_tools.py
